# rust-examples

./: .gitmodules  README.md
async-middleware/: Cargo.toml
async-middleware/src/: action.rs  main.rs  middleware.rs
letter-counter/: Cargo.toml  README.md  test.txt
letter-counter/src/: counter_channel.rs  counter_joinhandle.rs  counter_mutex.rs  main.rs
rest-api-postgres/: .env  Cargo.toml  README.md
rest-api-postgres/migrations/2022-04-29-150900_add_users/: up.sql
rest-api-postgres/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs  schema.rs
todo-list/: Cargo.toml
todo-list/src/: main.rs
web-service-template/: Cargo.toml
web-service-template/src/: main.rs
web-service-template/web/templates/: compliment.html
